--- a/.project
+++ b/.project
@@ -22,4 +22,11 @@
 		<nature>com.adobe.flexbuilder.project.flexnature</nature>
 		<nature>com.adobe.flexbuilder.project.actionscriptnature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>src/[source path] ExifInfo</name>
+			<type>2</type>
+			<location>C:/Users/Gunnar Karlsson/Documents/ActionScript/Libraries/ExifInfo</location>
+		</link>
+	</linkedResources>
 </projectDescription>
